--- a/client/app/app.component.html
+++ b/client/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="spinner-container" [ngClass]="{'--display-none':spinnerService.activePromiseCount<=0}">
+<div class="spinner-container" [ngClass]="{'--display-none':activePromiseCount<=0}">
 
     <div class="spinner">
         <div class="rect1"></div>
