--- a/client/app/uiComponents/autocompleteDropdown/dropdownItem/dropdownItem.component.html
+++ b/client/app/uiComponents/autocompleteDropdown/dropdownItem/dropdownItem.component.html
@@ -1,4 +1,4 @@
 <div [ngClass]="{'highlighted':!!selected}" class="dropdown-item" (click)="dropdownItemClick($event)" (mouseover)="mouseOver($event)"
     #itemElement>
-    {{_value.name}}
+    {{value.name}}
 </div>
