--- a/client/app/entry/vehicle/vehicleForm/brandModel/brandModel.component.html
+++ b/client/app/entry/vehicle/vehicleForm/brandModel/brandModel.component.html
@@ -1,12 +1,13 @@
 <div class="form-group">
     <label>Marka Model</label>
-    <select (blur)="onBlur()" [(ngModel)]="selectedValue" [attr.disabled]="!!_brandModels ? null:'disabled'" (change)="onBrandModelChange($event)" class="form-control form-control-sm">
+    <select (blur)="onBlur()" [(ngModel)]="selectedValue" [attr.disabled]="!!brandModels ? null:'disabled'" (change)="onBrandModelChange($event)"
+        class="form-control form-control-sm">
 
-        <option *ngIf="!_brandModels" value="null">Marka Seçiniz</option>
-        <ng-container *ngIf="!!_brandModels">
+        <option *ngIf="!brandModels" value="null">Marka Seçiniz</option>
+        <ng-container *ngIf="!!brandModels">
             <option value="null">Seçiniz</option>
 
-            <option *ngFor="let brandModel of _brandModels;let i=index;" [value]="brandModel._id">{{brandModel.name}}</option>
+            <option *ngFor="let brandModel of brandModels;let i=index;" [value]="brandModel._id">{{brandModel.name}}</option>
         </ng-container>
     </select>
 </div>
