--- a/client/app/entry/vehicle/vehicleForm/feature/feature.component.html
+++ b/client/app/entry/vehicle/vehicleForm/feature/feature.component.html
@@ -1,7 +1,24 @@
-<autocomplete-dropdown [dataSource]="features" displayField="name" valueField="_id">
+<div class="control-container row">
+    <div class="col-md-5 col-10">
 
-</autocomplete-dropdown>
+        <autocomplete-dropdown [(ngModel)]="selected" [dataSource]="features" displayField="name" valueField="_id">
 
-<button class="btn btn-success">
-    <i class="fa fa-plus"></i>
-</button>
+        </autocomplete-dropdown>
+
+    </div>
+    <div class="col-md-1 col-1">
+
+        <button class="btn btn-success" (click)="addClick($event)">
+            <i class="fa fa-plus"></i>
+        </button>
+    </div>
+
+</div>
+<div class="item-container row">
+    <div class="col-2">
+
+        <feature-item (outstandingChecked)="onOutstandingChecked($event)" (remove)="onItemRemoved($event)" *ngFor="let item of value;let i=index"
+            [value]="item"></feature-item>
+
+    </div>
+</div>
