--- a/client/app/entry/vehicle/vehicleForm/vehicleForm.component.html
+++ b/client/app/entry/vehicle/vehicleForm/vehicleForm.component.html
@@ -1,11 +1,6 @@
 {{vehicleForm.value|json}}
 <div [formGroup]="vehicleForm">
 
-    <div class="container-fluid">
-        <div class="row">
-            <button class="btn btn-success" (click)="saveVehicle($event)">Kaydet</button>
-        </div>
-    </div>
     <div class="padding-container">
         <div class="container-fluid form-container">
 
@@ -136,15 +131,10 @@
             <div>
                 <h3>Araç Özellikleri</h3>
             </div>
-            <div class="row">
 
-                <div class="col-md-6">
-
-                    <feature></feature>
+            <feature formControlName="features"></feature>
 
 
-                </div>
-            </div>
         </div>
     </div>
 
@@ -264,6 +254,15 @@
                     <fileuploader formControlName="files" [fileApiUrl]="vehicleService.vehicleFileApi" [entityId]="_vehicleModel?_vehicleModel._id:null"></fileuploader>
 
                 </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="padding-container">
+
+        <div class="container-fluid">
+            <div class="row">
+                <button class="btn btn-success" (click)="saveVehicle($event)">Kaydet</button>
             </div>
         </div>
     </div>
