--- a/client/styles/main.css
+++ b/client/styles/main.css
@@ -13,6 +13,11 @@
 .--display-none{
 	display:none;
 }
+
+.--cursor-disabled{
+	cursor:not-allowed !important;
+}
+
 .tab-navigation-container__item.active{
     border-bottom:none !important;
 }
@@ -44,5 +49,5 @@ input[type=date].form-control-sm{
 }
 
 .padding-container{
-	padding:16px;
+	padding:0 16px;
 }
